# AWS-Shikum

./: .gitignore
1-simple-agent-with-tools/: Dockerfile  agent.py  agent_deploy.py  agent_test.py  pyproject.toml
2-kb-agent/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  README.md  convert_csvs.py  kb_agent.py  kb_agent_deploy.py  kb_agent_test.py  kb_agent_tools.py  pyproject.toml  rehab_s3_layout.json  requirements.txt  rights_claims.csv  sku_catalog.csv  supplier_sku_links.csv  suppliers.csv  sync_rehab_data_to_s3.py
2-kb-agent/agentcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
2-kb-agent/raw_csvs/: 52593_-_שמש_-_הסכמי_מחירים_כללי-kms.csv  53331_-_שמש_-_פרוט_מקטים-_kms.csv  9028_דוח_ספקים_בעלי_הסכם_פעיל-kms (2).csv
3-agent-chat-app/: README.md  chat_gui.py  chat_gui.py.bak2  chat_gui.py.bak3  chat_gui.py.bak4  chat_gui.py.bak5  chat_gui.py.bak6  chat_gui.py.bak7  chat_gui.py.bak8  parameter_store.py  pyproject.toml
3-agent-chat-app/agentcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
