[project]
name = "agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.7",
    "bedrock-agentcore-starter-toolkit>=0.1.19",
    "boto3>=1.40.45",
    "ipython>=9.6.0",
    "strands-agents>=1.10.0",
    "strands-agents-tools>=0.2.9",
]
