[project]
name = "agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.40.45",
    "ipython>=9.6.0",
    "gradio<=6.2.0",
    "requests"
]

[tool.setuptools]
py-modules = ["chat_gui", "parameter_store"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
